--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://192.168.55.242:3306/semestral?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springbootdb?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql:true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
+logging.level.cz.tul=INFO
